Update and rename signal_app.html to index.html

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <option value="15m" data-seconds="900">15 минут</option>
     </select>
 
-    <button id="btn-start">Получить прогноз и запустить таймер</button>
+    <button id="btn-start">Получить прогноз </button>
 
     <div class="signal-result" id="signal-block" style="display:none;">
         <div id="signal-asset"></div>
@@ -191,3 +191,4 @@
 </script>
 </body>
 </html>
+
