--- a/index.html
+++ b/index.html
@@ -134,12 +134,16 @@
             gap: 8px;
         }
 
+        /* Селекты: тёмные, без белых блоков */
+
         select {
             flex: 1;
-            padding: 8px 10px;
+            padding: 9px 11px;
             border-radius: 12px;
-            border: 1px solid rgba(55, 65, 81, 0.9);
-            background: radial-gradient(circle at 0 0, rgba(15, 23, 42, 0.9), #020617);
+            border: 1px solid rgba(55, 65, 81, 0.95);
+            background-color: #020617;
+            background-image:
+                radial-gradient(circle at 0 0, rgba(15, 23, 42, 0.9), #020617);
             color: var(--text-main);
             font-size: 13px;
             appearance: none;
@@ -149,6 +153,11 @@
         select:focus {
             border-color: rgba(34, 197, 94, 0.8);
             box-shadow: 0 0 0 1px rgba(34, 197, 94, 0.4);
+        }
+
+        select option {
+            background-color: #020617;
+            color: var(--text-main);
         }
 
         .pill-row {
@@ -455,15 +464,35 @@
             </div>
         </div>
 
+        <!-- Монеты / активы -->
         <div class="field-group">
             <label for="asset">Монета / актив</label>
             <div class="field-row">
                 <select id="asset">
-                    <option value="EURUSD">EURUSD</option>
-                    <option value="GBPUSD">GBPUSD</option>
-                    <option value="USDJPY">USDJPY</option>
-                    <option value="BTCUSDT">BTCUSDT</option>
-                    <option value="ETHUSDT">ETHUSDT</option>
+                    <!-- Forex -->
+                    <option value="EURUSD">EURUSD · EUR / USD</option>
+                    <option value="GBPUSD">GBPUSD · GBP / USD</option>
+                    <option value="USDJPY">USDJPY · USD / JPY</option>
+                    <option value="USDCHF">USDCHF · USD / CHF</option>
+                    <option value="USDCAD">USDCAD · USD / CAD</option>
+                    <option value="AUDUSD">AUDUSD · AUD / USD</option>
+                    <option value="NZDUSD">NZDUSD · NZD / USD</option>
+                    <option value="EURJPY">EURJPY · EUR / JPY</option>
+                    <option value="EURGBP">EURGBP · EUR / GBP</option>
+                    <option value="EURCHF">EURCHF · EUR / CHF</option>
+                    <option value="GBPJPY">GBPJPY · GBP / JPY</option>
+                    <!-- Metals -->
+                    <option value="XAUUSD">XAUUSD · Золото</option>
+                    <option value="XAGUSD">XAGUSD · Серебро</option>
+                    <!-- Crypto -->
+                    <option value="BTCUSDT">BTCUSDT · Bitcoin</option>
+                    <option value="ETHUSDT">ETHUSDT · Ethereum</option>
+                    <option value="BNBUSDT">BNBUSDT · BNB</option>
+                    <option value="SOLUSDT">SOLUSDT · Solana</option>
+                    <option value="XRPUSDT">XRPUSDT · XRP</option>
+                    <option value="LTCUSDT">LTCUSDT · Litecoin</option>
+                    <option value="DOGEUSDT">DOGEUSDT · Doge</option>
+                    <option value="TONUSDT">TONUSDT · Toncoin</option>
                 </select>
             </div>
             <div class="pill-row">
@@ -471,16 +500,21 @@
             </div>
         </div>
 
+        <!-- Время экспирации -->
         <div class="field-group">
             <label for="expiry">Время экспирации</label>
             <div class="field-row">
                 <select id="expiry">
-                    <option value="5s" data-seconds="5">5 секунд</option>
+                    <option value="5s"  data-seconds="5">5 секунд</option>
                     <option value="10s" data-seconds="10">10 секунд</option>
+                    <option value="15s" data-seconds="15">15 секунд</option>
                     <option value="30s" data-seconds="30">30 секунд</option>
-                    <option value="1m" data-seconds="60">1 минута</option>
-                    <option value="3m" data-seconds="180">3 минуты</option>
-                    <option value="5m" data-seconds="300">5 минут</option>
+                    <option value="45s" data-seconds="45">45 секунд</option>
+                    <option value="1m"  data-seconds="60">1 минута</option>
+                    <option value="2m"  data-seconds="120">2 минуты</option>
+                    <option value="3m"  data-seconds="180">3 минуты</option>
+                    <option value="5m"  data-seconds="300">5 минут</option>
+                    <option value="10m" data-seconds="600">10 минут</option>
                     <option value="15m" data-seconds="900">15 минут</option>
                 </select>
             </div>
@@ -500,9 +534,7 @@
             <div class="result-main">
                 <div class="direction-block">
                     <div class="direction-label">Прогноз по направлению</div>
-                    <div class="direction-value" id="signal-direction">
-                        <!-- сюда подставим текст и стрелку -->
-                    </div>
+                    <div class="direction-value" id="signal-direction"></div>
                 </div>
 
                 <div class="timer-shell">
@@ -569,7 +601,7 @@
     let remaining = 0;
     let history = [];
 
-    // Покажем юзера в верхней плашке (если WebApp действительно внутри Telegram)
+    // Показываем юзера в шапке
     try {
         if (tg && tg.initDataUnsafe && tg.initDataUnsafe.user) {
             const u = tg.initDataUnsafe.user;
@@ -584,7 +616,7 @@
         userPill.textContent = 'Профиль недоступен';
     }
 
-    // ----- Работа с режимами -----
+    // ----- Режимы -----
 
     function applyMode(mode, changeExpiry = true) {
         currentMode = mode;
@@ -600,7 +632,7 @@
         } else {
             modeHint.textContent = 'Агрессивный режим — короткие сделки и максимум динамики.';
             if (changeExpiry) {
-                selectExpiry.value = '5s';
+                selectExpiry.value = '15s';
             }
         }
     }
@@ -609,7 +641,7 @@
         btn.addEventListener('click', () => {
             const mode = btn.dataset.mode;
             applyMode(mode, true);
-            saveState(); // сохраняем выбор
+            saveState();
         });
     });
 
@@ -719,9 +751,7 @@
                 mode: currentMode
             };
             window.localStorage.setItem(STORAGE_KEY, JSON.stringify(state));
-        } catch (e) {
-            // молча игнорируем, если localStorage недоступен
-        }
+        } catch (e) {}
     }
 
     function loadState() {
@@ -758,7 +788,6 @@
         const seconds = parseInt(expiryOption.dataset.seconds, 10);
         const expiryLabel = expiryOption.textContent;
 
-        // Генерация "прогноза" вверх/вниз
         const direction = Math.random() < 0.5 ? 'UP' : 'DOWN';
 
         signalAsset.textContent = asset;
@@ -798,8 +827,7 @@
         });
 
         saveState();
-
-        // сюда при желании можно добавить tg.sendData(...)
+        // при желании сюда можно добавить tg.sendData(...)
     });
 </script>
 </body>
