--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             --text-muted: #9ca3af;
         }
 
-        * { 
-            box-sizing: border-box; 
+        * {
+            box-sizing: border-box;
         }
 
         /* Кастомные скроллбары под тёмный стиль */
@@ -69,6 +69,7 @@
             display: flex;
             align-items: center;
             gap: 6px;
+            min-width: 0;
         }
 
         .app-title {
@@ -127,7 +128,8 @@
             border: 1px solid rgba(148, 163, 184, 0.35);
             font-size: 11px;
             color: var(--text-muted);
-            max-width: 55%;
+            flex: 1 1 auto;
+            min-width: 0;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -141,6 +143,7 @@
             border-radius: 999px;
             background: rgba(15, 23, 42, 0.95);
             border: 1px solid rgba(31, 41, 55, 0.9);
+            flex-shrink: 0;
         }
 
         .lang-btn {
@@ -473,7 +476,7 @@
             border-radius: 16px;
             padding: 12px 10px 10px;
             background: radial-gradient(circle at 0 0, rgba(8, 47, 73, 0.9), rgba(15, 23, 42, 0.96));
-            border: 1px солid rgba(51, 65, 85, 0.9);
+            border: 1px solid rgba(51, 65, 85, 0.9);
             display: none;
         }
 
@@ -726,7 +729,7 @@
             </div>
         </div>
         <div class="topbar-right">
-            <div class="user-pill" id="user-pill">Загрузка профиля…</div>
+            <div class="user-pill" id="user-pill" data-type="local">Локальный режим</div>
             <div class="lang-switch" id="lang-switch">
                 <button type="button" class="lang-btn active" data-lang="ru">
                     <span class="lang-label">RU</span>
@@ -767,7 +770,7 @@
             <div class="dropdown" id="asset-dropdown">
                 <button class="dropdown-toggle" id="asset-toggle" type="button">
                     <div class="dropdown-left">
-                        <div class="dropdown-icon" id="asset-icon">₿</div>
+                        <div class="dropdown-icon" id="asset-icon">FX</div>
                         <div class="dropdown-labels">
                             <div class="dropdown-main" id="asset-label-main">EURUSD</div>
                             <div class="dropdown-sub" id="asset-label-sub">Евро / Доллар</div>
@@ -1203,7 +1206,7 @@
                     <div class="dropdown-caret">▾</div>
                 </button>
                 <div class="dropdown-menu" id="expiry-menu">
-                    <!-- Новый пункт: 3 секунды -->
+                    <!-- 3 секунды -->
                     <div class="dropdown-item" data-value="3s" data-seconds="3" data-label="3 секунды" data-sub="Реакция на импульс">
                         <div class="dropdown-item-left">
                             <div class="dropdown-icon" style="background:#1d4ed8;">⏱</div>
@@ -1394,7 +1397,7 @@
     const LANG_STORAGE_KEY = 'aisignal_lang_v1';
 
     let currentLang = 'ru';
-    let appStatus = tg ? 'online' : 'online';
+    let appStatus = 'online';
 
     const i18n = {
         ru: {
@@ -1708,18 +1711,24 @@
     let currentAsset = null;
     let currentExpiry = null;
 
+    // профиль в шапке
     try {
         if (tg && tg.initDataUnsafe && tg.initDataUnsafe.user) {
             const u = tg.initDataUnsafe.user;
-            const name = (u.username && '@' + u.username) ||
-                         [u.first_name, u.last_name].filter(Boolean).join(' ') ||
-                         ('ID ' + u.id);
+            const name =
+                (u.username && '@' + u.username) ||
+                [u.first_name, u.last_name].filter(Boolean).join(' ') ||
+                ('ID ' + u.id);
+
             userPill.textContent = name;
+            userPill.dataset.type = 'user';
         } else {
             userPill.textContent = 'Локальный режим';
+            userPill.dataset.type = 'local';
         }
-    } catch(e) {
+    } catch (e) {
         userPill.textContent = 'Профиль недоступен';
+        userPill.dataset.type = 'error';
     }
 
     function updateModeHint() {
@@ -2073,6 +2082,18 @@
             statusDotEl.classList.toggle('offline', appStatus !== 'online');
         }
 
+        // user-pill перевод
+        if (userPill) {
+            const type = userPill.dataset.type;
+            if (type === 'local') {
+                userPill.textContent =
+                    currentLang === 'ru' ? 'Локальный режим' : 'Local mode';
+            } else if (type === 'error') {
+                userPill.textContent =
+                    currentLang === 'ru' ? 'Профиль недоступен' : 'Profile unavailable';
+            }
+        }
+
         applyAssetTranslations();
         applyExpiryTranslations();
         renderHistory();
@@ -2205,4 +2226,5 @@
 </script>
 </body>
 </html>
+
 
