--- a/index.html
+++ b/index.html
@@ -1421,7 +1421,7 @@
             error_select_before_start: 'Выбери актив и время экспирации перед запуском.',
             mode_calm_label: 'Спокойный',
             mode_aggressive_label: 'Агрессивный',
-            mode_hint_calm: 'Спокойный режим — больше времени на решение, меньше шума.',
+            mode_hint_calm: 'Спокойный режим — больше времени на решение.',
             mode_hint_aggressive: 'Агрессивный режим — короткие сделки и максимум динамики.',
             live_badge: 'LIVE',
             sec_forex: 'Forex — валютные пары',
@@ -2226,5 +2226,3 @@
 </script>
 </body>
 </html>
-
-
